# R08.007.Random-Sampling.Dowell

./: ExcelRP.cpp  FieldRP.cpp  README.md  Random Allocation_1.ipynb  index.html  logic.md  package-lock.json  package.json  random_allocation_function.py  requirements.txt  vite.config.js
.github/workflows/: deploy.yml
Random_Allocation/: backend_code.py  random_allocation.py  requirements.txt
Random_Allocation/templates/: excel.html  home.html  img.html
Random_Allocation_API/: CMakeLists.txt  db.sqlite3  manage.py
Random_Allocation_API/API/: urls.py  views.py
Random_Allocation_API/API/templates/: excel.html  field.html
Random_Allocation_API/Experimental_Frontend/: backend_code.py
Random_Allocation_API/Experimental_Frontend/templates/: excel.html  field.html  home.html  img.html
Random_Allocation_API/Random_Allocation_API/: asgi.py  settings.py  urls.py  wsgi.py
Random_Allocation_API/random_allocation/: requirements.txt
Random_Allocation_API/random_allocation/random_allocation/: asgi.py  settings.py
Random_Allocation_API/src/: main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
random_allocation/: db.sqlite3  manage.py
random_allocation/experimental_frontend/: apps.py  urls.py  views.py
random_allocation/random_allocation/: api.py  settings.py  urls.py  wsgi.py
random_allocation/random_allocation_api/: apps.py  urls.py  views.py
src/: App.jsx  PageRouter.jsx  index.css  main.jsx
src/components/: Canvas.jsx  ChartWithArrow.jsx  ContactUs.jsx  DynamicForm.jsx  ExtractorForm.jsx  GraphInfo.jsx  (+8 more)
(+6 files in other folders)
